--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.6.0
+asgiref==3.7.2
 certifi==2023.5.7
 chardet==5.1.0
 charset-normalizer==3.1.0
-Django==4.2.1
+Django==4.2.2
 django-admin-honeypot-updated-2021==1.2.0
-django-admin-thumbnails==0.2.7
+django-admin-thumbnails==0.2.8
 django-dotenv==1.4.2
 django-ipware==5.0.0
 django-session-timeout==0.1.0
@@ -12,8 +12,9 @@ idna==3.4
 Pillow==9.5.0
 python-decouple==3.8
 pytz==2023.3
-requests==2.30.0
+requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
+typing-extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.2
+urllib3==2.0.3
